fix(deepay): resolve merge conflicts + fix all Java 8 compatibility errors, build passes
Agent-Logs-Url: https://github.com/deepveloce-dot/ruoyi-vue-pro/sessions/8e742389-0e35-4e76-b959-3696a22a7554

Co-authored-by: deepveloce-dot <275557679+deepveloce-dot@users.noreply.github.com>